refactor : 엔티티와 DTO 분리 및 연관 관계 추가에 따른 코드 수정